force-app/main/default/objects/LLC_BI__Loan__c/fields/Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Application_Method__c</fullName>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>By Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>