force-app/main/default/objects/LLC_BI__Loan__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>Custom field used for training purposes</description>
    <displayFormat>App-{000000}</displayFormat>
    <label>Application #</label>
    <type>AutoNumber</type>
</CustomField>