force-app/main/default/objects/LLC_BI__Loan__c/fields/Broker_True__c.field-meta.xml
<CustomField>
    <fullName>Broker_True__c</fullName>
    <formula>IF($Profile.Name = &quot;nCino Partner Community User&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker True</label>
    <type>Checkbox</type>
</CustomField>