force-app/main/default/objects/LLC_BI__Loan__c/fields/Change_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Details__c</fullName>
    <inlineHelpText>Please enter any additional details needed for change request</inlineHelpText>
    <label>Change Request Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>