force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Applying_with_Co_Applicant__c.field-meta.xml
<CustomField>
    <fullName>cm_Applying_with_Co_Applicant__c</fullName>
    <description>Indicates whether the application has more than one borrower. Used in Retail Online Application to conditionally render co-owner  route and route agreements.</description>
    <label>Applying with Co-Applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>