force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>cm_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually Input by user to indicate who the loan is sent to for the first step of the Retail Loan Approval Process.</description>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IBCL_Loans1</relationshipName>
    <type>Lookup</type>
</CustomField>