force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Send_to_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>cm_Send_to_Approver_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, Retail Loan approval process will route to user that is populated in Approver 1 Lookup field.</description>
    <label>Send to Approver 1</label>
    <type>Checkbox</type>
</CustomField>