force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Send_to_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>cm_Send_to_Approver_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, Retail Loan approval process will route to user that is populated in Approver 2 Lookup field.</description>
    <label>Send to Approver 2</label>
    <type>Checkbox</type>
</CustomField>