force-app/main/default/objects/LLC_BI__Loan__c/fields/ConsumerLoan__c.field-meta.xml
<CustomField>
    <fullName>ConsumerLoan__c</fullName>
    <formula>IF(
ISPICKVAL(LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.LLC_BI__Category__c, &quot;Consumer&quot;),
true, 
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Custom - used in Retail Auto Decisioning</inlineHelpText>
    <label>Consumer Loan</label>
    <type>Checkbox</type>
</CustomField>