force-app/main/default/objects/LLC_BI__Loan__c/fields/Debt_to_Income_Ratio_cm__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Income_Ratio_cm__c</fullName>
    <formula>IF(LLC_BI__Total_Monthly_Income__c &gt; 0 , (LLC_BI__Total_Monthly_Debt__c - LLC_BI__Monthly_Payment__c ) / LLC_BI__Total_Monthly_Income__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt to Income Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>