force-app/main/default/objects/LLC_BI__Loan__c/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <label>Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>