force-app/main/default/objects/LLC_BI__Loan__c/fields/Legal_Firm_Customer__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used to lookup Legal Firms that have been entered as a Relationship within nCino.  If you do not see your Legal Firm&apos;s name, please create them as a new Relationship and return to this field.</inlineHelpText>
    <label>Legal Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Firm</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>