force-app/main/default/objects/LLC_BI__Loan__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>