force-app/main/default/objects/LLC_BI__Loan__c/fields/Material_Changes_cm__c.field-meta.xml
<CustomField>
    <fullName>Material_Changes_cm__c</fullName>
    <label>Material Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Material Changes</fullName>
            </value>
            <value>
                <fullName>Change Product</fullName>
                <isActive>false</isActive>
                <label>Change Product</label>
            </value>
            <value>
                <fullName>Change Rate</fullName>
                <isActive>false</isActive>
                <label>Change Rate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>