force-app/main/default/objects/LLC_BI__Loan__c/fields/NameonCreditCard__c.field-meta.xml
<CustomField>
    <fullName>NameonCreditCard__c</fullName>
    <label>Name on Credit Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>