force-app/main/default/objects/LLC_BI__Loan__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>A picklist to guide the user through the next step after completing auto-decisioning on a loan. The selection of this field renders additional routes within the Retail Loan UI.</description>
    <label>Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Initiate Adverse Action</fullName>
            </value>
            <value>
                <fullName>Manual Underwriting - Counter Offer</fullName>
            </value>
            <value>
                <fullName>Manual Underwriting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>