force-app/main/default/objects/LLC_BI__Loan__c/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <label>Opportunity Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>