force-app/main/default/objects/LLC_BI__Loan__c/fields/PartnerPortalAccess_AddOrRemove__c.field-meta.xml
<CustomField>
    <fullName>PartnerPortalAccess_AddOrRemove__c</fullName>
    <label>PartnerPortalAccess - AddOrRemove</label>
    <length>10</length>
    <type>Text</type>
</CustomField>