force-app/main/default/objects/LLC_BI__Loan__c/fields/PartnerPortalAccess_User__c.field-meta.xml
<CustomField>
    <fullName>PartnerPortalAccess_User__c</fullName>
    <label>PartnerPortalAccess - User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>