force-app/main/default/objects/LLC_BI__Loan__c/fields/Personal_Loan__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Loan</label>
    <type>Checkbox</type>
</CustomField>