force-app/main/default/objects/LLC_BI__Loan__c/fields/Post_Closing_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Review_Comments__c</fullName>
    <inlineHelpText>Enter comments relevant to Post Closing Review findings.</inlineHelpText>
    <label>Post Closing Review Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>