force-app/main/default/objects/LLC_BI__Loan__c/fields/Post_Closing_Review_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Review_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to list the user who completed the Post Closing Review.</inlineHelpText>
    <label>Post Closing Review Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>