force-app/main/default/objects/LLC_BI__Loan__c/fields/Post_Closing_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Review_Completed_Date__c</fullName>
    <inlineHelpText>Enter the date that the Post Closing Review was completed.</inlineHelpText>
    <label>Post Closing Review Completed Date</label>
    <type>Date</type>
</CustomField>