force-app/main/default/objects/LLC_BI__Loan__c/fields/Risk_Rating_Template__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Template__c</fullName>
    <label>Risk Rating Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>