force-app/main/default/objects/LLC_BI__Loan__c/fields/Roll_Up_Adverse_Action_cm__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Adverse_Action_cm__c</fullName>
    <description>Used to conditionally render the adverse action route on loans.</description>
    <inlineHelpText>Roll up Count of Adverse Action Records</inlineHelpText>
    <label>Roll Up Adverse Action</label>
    <summaryFilterItems>
        <field>LLC_BI__Adverse_Action__c.AA_Type__c</field>
        <operation>notEqual</operation>
        <value>Counter Offer</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Adverse_Action__c.LLC_BI__Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>