force-app/main/default/objects/LLC_BI__Loan__c/fields/Roll_Up_Pending_Counter_Offers_cm__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Pending_Counter_Offers_cm__c</fullName>
    <inlineHelpText>Roll up summary of Adverse Actions with an AA type of Counter Offer &amp; Counter Offer status = &apos;Pending Customer&apos;</inlineHelpText>
    <label>Pending Counter Offer</label>
    <summaryFilterItems>
        <field>LLC_BI__Adverse_Action__c.AA_Type__c</field>
        <operation>equals</operation>
        <value>Counter Offer</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LLC_BI__Adverse_Action__c.Counter_Offer_Status__c</field>
        <operation>equals</operation>
        <value>Counter Offer Pending Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Adverse_Action__c.LLC_BI__Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>