force-app/main/default/objects/LLC_BI__Loan__c/fields/Secondary_Market_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Market_Buyer__c</fullName>
    <label>Secondary Market Buyer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>