force-app/main/default/objects/LLC_BI__Loan__c/fields/Submitted_for_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval_Date__c</fullName>
    <inlineHelpText>This date is automatically populated when a loan is Submitted for Approval.  It cannot be manually updated.</inlineHelpText>
    <label>Submitted for Approval Date</label>
    <type>Date</type>
</CustomField>